--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -761,16 +761,19 @@ section,
   font-weight: 600;
   font-size: 12px;
   letter-spacing: 1px;
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: fit-content;
   padding: 12px 40px;
   border-radius: 50px;
   transition: 0.5s;
   margin-top: 30px;
 }
 
-.content .row .btn-get-started:hover {
+.content .btn-get-started:hover {
   background: color-mix(in srgb, var(--accent-color) 80%, white 20%);
-  transform: scale(1.1); 
+  transform: scale(20%); 
   transition: transform 0.3s ease-in-out; 
 }
 
